setup gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "anthony-baker-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anthony-baker87.github.io/anthony-baker-portfolio",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "export": "next export",
+    "predeploy": "npm run build && npm run export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "15.5.0",
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0"
+    "eslint-config-next": "15.5.0",
+    "gh-pages": "^6.3.0"
   }
 }
